# libdrm-imx

./: Android.bp  Android.mk  Android.sources.bp  COPYING  Makefile.am  Makefile.sources  SCR.txt  configure.ac  meson.build  meson_options.txt  xf86drm.h  xf86drmMode.c  xf86drmMode.h
amdgpu/: Android.bp  Android.sources.bp
data/: Android.bp  Android.mk
etnaviv/: Android.bp  Android.sources.bp
freedreno/: Android.bp  Android.sources.bp
include/drm/: amdgpu_drm.h  drm.h  drm_fourcc.h  drm_mode.h  imx_drm.h  vivante_drm.h
intel/: Android.bp  Android.sources.bp
libkms/: Android.bp  Android.sources.bp
nouveau/: Android.bp  Android.sources.bp
omap/: Android.bp  Android.sources.bp
radeon/: Android.bp  Android.sources.bp
tests/: Android.bp
tests/modetest/: Android.bp  Android.sources.bp
tests/proptest/: Android.bp
tests/util/: Android.bp  Android.sources.bp  kms.c
tests/vivante/: Makefile.am  viv_bo_test.c
vivante/: Android.bp  Android.mk  Makefile.am  libdrm_vivante.pc  libdrm_vivante.pc.in  meson.build  vivante-symbol-check  vivante.c  vivante.h  vivante_bo.c  vivante_bo.h
